# cw20-factory

./: .gitignore  Cargo.toml  Makefile.toml  README.md
contracts/base/: Cargo.toml
contracts/base/src/: contract.rs
contracts/cw20-factory/base/: Cargo.toml
contracts/cw20-factory/base/src/: contract.rs  state.rs
contracts/cw20-factory/osmosis/: Cargo.toml
contracts/cw20-factory/osmosis/src/: interface.rs  lib.rs
contracts/cw20-indexer/: Cargo.toml
contracts/cw20-indexer/src/: contract.rs  function.rs  lib.rs  query.rs  state.rs
contracts/osmosis/: Cargo.toml
package/: Cargo.toml
package/src/: lib.rs
package/src/cw20_factory/: definitions.rs  error.rs  interface.rs  mod.rs  msgs.rs  traits.rs
package/src/cw20_indexer/: error.rs  mod.rs  msgs.rs
test/: Cargo.toml
test/src/: helper.rs  integration_tests.rs  lib.rs
