[workspace]
members                  = ["contracts/*", "package"]

[workspace.package]
version                  = "0.1.0"
edition                  = "2021"
authors                  = ["Rhaki"]

[workspace.dependencies]
cosmwasm-schema          = "1.5.3"
cosmwasm-std             =  { version = "=1.5.2" }
cw20                     = "1.1.2"
cw20-base                = "1.1.2"
cw-storage-plus          = "1.2.0"

cw20-factory-base        = { path = "./contracts/base" }
cw20-factory-pkg         = { path = "./package" }