[workspace]
members                  = [
                            "contracts/cw20-factory/*",
                            "contracts/cw20-indexer",
                            "package",
                            "test"
                            ]

[workspace.package]
version                  = "0.1.0"
edition                  = "2021"
authors                  = ["Rhaki"]

[workspace.dependencies]
cosmwasm-schema          = "1.5.3"
cosmwasm-std             = "1.5.2"
cw20                     = "1.1.2"
cw20-base                = { version = "1.1.2", features = ["library"] }
cw-storage-plus          = "1.2.0"
rhaki-cw-plus            = "1.0.2"
thiserror                = "1.0.56"

cw20-factory-pkg         = { path = "./package" }
cw20-factory-base        = { path = "./contracts/cw20-factory/base" }
cw20-factory-osmosis     = { path = "./contracts/cw20-factory/osmosis" }
