[package]
name                 = "cw20-factory-pkg"

version              = { workspace = true }
authors              = { workspace = true }
edition              = { workspace = true }

[dependencies]
cosmwasm-std         = { workspace = true, features = ["staking", "stargate"] }
cosmwasm-schema      = { workspace = true }
cw20                 = { workspace = true }
cw20-base            = { workspace = true }
thiserror            = { workspace = true }