[package]
name                 = "cw20-factory-test"
version              = { workspace = true }
edition              = { workspace = true }

[dependencies]
cosmwasm-std         = { workspace = true }
rhaki-cw-plus        = { workspace = true, features = ["multi-test", "osmosis"]}
cw20                 = { workspace = true }
cw20-base            = { workspace = true }

cw20-factory-osmosis = { workspace = true }
cw20-factory-pkg     = { workspace = true }
cw20-factory-indexer = { workspace = true }