[package]
name                 = "cw20-factory-osmosis"
version              = { workspace = true }
authors              = { workspace = true }
edition              = { workspace = true }
exclude              = ["contract.wasm", "hash.txt"]

[lib]
crate-type           = ["cdylib", "rlib"]

[profile.release]
opt-level            = 3
debug                = false
rpath                = false
lto                  = true
debug-assertions     = false
codegen-units        = 1
panic                = 'abort'
incremental          = false
overflow-checks      = true

[features]
backtraces           = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std         = { workspace = true }
cw20-factory-base    = { workspace = true }