[package]
name                 = "cw20-factory-base"
version              = { workspace = true }
authors              = { workspace = true }
edition              = { workspace = true }

[dependencies]
cosmwasm-std         = { workspace = true }
cw20                 = { workspace = true }
cw20-base            = { workspace = true }
cw20-factory-pkg     = { workspace = true }
cw-storage-plus      = { workspace = true }
rhaki-cw-plus        = { workspace = true }
