[package]
name              = "cw20-factory-osmosis"
description       = "Osmosis cw20-factory implementation"
version           = { workspace = true }
authors           = { workspace = true }
edition           = { workspace = true }
license           = { workspace = true }
repository        = { workspace = true }
exclude           = ["contract.wasm", "hash.txt"]

[lib]
crate-type        = ["cdylib", "rlib"]

[features]
library           = []

[profile.release]
opt-level         = 3
debug             = false
rpath             = false
lto               = true
debug-assertions  = false
codegen-units     = 1
panic             = 'abort'
incremental       = false
overflow-checks   = true

[dependencies]
cosmwasm-std      = { workspace = true }
cw20              = { workspace = true }
cw20-base         = { workspace = true }
cw20-factory-base = { workspace = true }
cw20-factory-pkg  = { workspace = true }
rhaki-cw-plus     = { workspace = true }
osmosis-std       = "0.22.0"
